--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 999;
+    z-index: 99;
 }
 
 .nav{
@@ -99,4 +99,79 @@ body{
     background-image: url("../img/icon.png");
     height:37px;
     left: 40%;
+}
+
+#menuBtn{
+    background-color:transparent;
+    border: none;
+    float:right;
+}
+
+.menu-icon{
+    color: #fff;
+    margin: 5px;
+    font-size: 30px;
+}
+
+.mobile{
+    display:none;
+}
+
+#mobileMenu{
+    width: 80%;
+    background-color:#87d37c;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    transition: opacity 1s ease-out;
+    transition: height 1s ease-out;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+}
+
+#mobileMenu.active{
+    opacity: 1;
+    height: 100vh;
+}
+
+#closeBtn{
+    background-color:transparent;
+    border: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin:10px;
+    font-size:25px;
+}
+.mobile-menu{
+    margin: 0;
+    margin-block-start:0;
+    padding:0;
+    margin-top: 20px;
+}
+
+.mobile-menu li{
+    text-transform: uppercase;
+    margin-right: 10px;
+    list-style-type: none;
+    font-size: 25px;
+    color: #292929;
+    font-family:Arial, Helvetica, sans-serif;
+    padding-bottom: 5px;
+    margin-top: 10px;
+    border-bottom:1px solid #292929;
+    padding-left: 12px;
+
+
+}
+
+@media (max-width: 768px) {
+    .desktop-menu{
+        display: none;
+    }
+    .mobile{
+        display:block
+    }
 }
