--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,6 @@ body{
     background-size: cover;
     text-align: center;
     position: relative;
-    margin-bottom:500px;
 }
 
 .banner-wrapper{
@@ -166,6 +165,56 @@ body{
 
 
 }
+
+.container{
+    width:80%;
+    margin: auto;
+}
+
+#featured-section{
+    margin-top: 100px;
+}
+
+.section-title{
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 35px;
+}
+
+.section-title-description{
+    text-align: center;
+    width: 80%;
+    margin: auto;
+    color:#3f3f3f;
+    margin-bottom: 30px;
+}
+
+.featured-grid{
+    display:grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-gap:15px;
+}
+.featured-grid .features{
+    display:inline-grid;
+    text-align: center;
+}
+
+.feature-icon{
+    border: 2px solid #87d37c;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    color: #87d37c;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    font-size: 25px;
+}
+
+.feature-icon i{
+    margin: auto;
+}
+
 
 @media (max-width: 768px) {
     .desktop-menu{
