grid layout responsive css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,4 +253,16 @@ body{
     .mobile{
         display:block
     }
+    
+    .featured-grid{
+        grid-template-columns: 50% 50%;
+    }
+    
+    .students-grid{
+        display: grid;
+        grid-template-columns:100%;
+    }
+    .student-content{
+        margin: 10px;
+    }
 }
